ChangeLog for herdstat

2005-03-22 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (1.0_rc1-release).
	* bashcomp, doc/herdstat.1.in, src/herdstat.cc, src/options.cc:
	Added --nocolor.
	* src/formatter.cc: Fixed a few bugs to allow --nocolor to work as
	expected.  Moved append() to private, and added operator() as an
	interface. Also moved format_attrs_T and highlight() private.

2005-03-21 Aaron Walker <ka0ttic@gentoo.org>

	* src/exceptions.hh: Revert gcc-4 fixes since gcc-3.3.x has a broken
	va_start macro, causing numerous warnings.

2005-03-19 Aaron Walker <ka0ttic@gentoo.org>

	* src/action_dev_handler.cc: Fixed too low maxlabel value causing an
	exception when '-d all' is specified.

2005-03-18 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (release-0.6).
	* doc/herdstat.1.in: Added --count and a couple examples.
	* bashcomp: Updated to allow --dev and --package to be specified at
	the same time. Also added --count.
	* src/options.cc: Added dev and count option.
	* src/herdstat.cc: Allow both --dev and --package to be specified at
	the same time in order to allow us to look up packages belonging to a
	certain developer. Added --count option.
	* src/action_pkg_handler.cc: Added developer support so that
	specifying --dev and --package will work.  Also added --count support.
	* src/action_dev_handler.cc: Removed check for dev w/o email address
	since metadata_xml_handler_T now handles that. Also added --count
	support.
	* src/action_herd_handler.cc: Added --count support.
	* src/herds.cc: Added --count support.
	* src/formatter.hh: Added size() method for returning the current
	buffer size.

2005-03-17 Aaron Walker <ka0ttic@gentoo.org>

	* src/formatter.cc, src/formatter.hh: Added highlighting
	functionality.  New functions highlight(), add_highlight(),
	set_highlightcolor(), highlightcolor().  Added vector to
	format_attrs_T for storing words we should highlight on.