@@ -47,7 +47,7 @@ action_stats_handler_T::operator() (herds_T &herds_xml,
     /* set format attributes */
     formatter_T output;
     output.set_maxlabel(35);
-    output.set_maxdata(optget("maxcol", size_t) - output.maxlabel());
+    output.set_maxdata(optget("maxcol", std::size_t) - output.maxlabel());
     output.set_attrs();
 
     herds_T::iterator h;
